fix: update version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 description = "TradingView VCP screener utilities"
 authors = [{ name = "TightZone" }]
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.13"
 dependencies = [
-    "tradingview-ta>=3.3.0",
+    "tradingview-ta==3.3.0",
 ]
 
 [project.scripts]
 tightzone = "tightzone.cli:main"
+    
