Limit CI runs to codex branches

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,11 @@ name: CI
 
 on:
   push:
-    branches: [ main, develop ]
+    branches:
+      - 'codex/**'
   pull_request:
+    branches:
+      - 'codex/**'
 
 jobs:
   tests:
